# LocalCode

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-cli.yml  release-desktop-linux.yml  release-desktop-macos.yml
.localcode/: index.json
apps/cli-wrapper/: .gitignore  install.js  package.json
apps/desktop/: package-lock.json  package.json  vitest.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: agent.rs  chat.rs  debug.rs  fs.rs  git.rs  llm.rs  lsp.rs  mod.rs  search.rs  terminal.rs
apps/desktop/src/components/AIChat/: ChatPanel.tsx  MentionPopup.tsx
apps/desktop/src/components/ActivityBar/: ActivityBar.tsx
apps/desktop/src/components/Composer/: Composer.tsx  FileChanges.tsx
apps/desktop/src/components/Debug/: CallStack.tsx  DebugPanel.tsx  Variables.tsx
apps/desktop/src/components/Editor/: AppPreview.tsx  Breadcrumbs.tsx  CodebaseMap.tsx  CommandPalette.tsx  DiffViewer.tsx  EditorPanel.tsx  EditorTabs.tsx  FindReplace.tsx  InlineEdit.tsx  MarkdownPreview.tsx  MonacoEditor.tsx  QuickOpen.tsx  SplitEditor.tsx
apps/desktop/src/components/Git/: BlameView.tsx  CommitView.tsx  GitPanel.tsx  HistoryView.tsx  StagingArea.tsx
apps/desktop/src/components/Settings/: LLMSettings.tsx  MCPSettings.tsx  SettingsPanel.tsx  SetupWizard.tsx
apps/desktop/src/components/Sidebar/: FileExplorer.tsx
apps/desktop/src/hooks/: useInlineCompletion.ts  useLspFeatures.ts  useNextEditSuggestion.ts
apps/desktop/src/stores/: appStore.ts
apps/desktop/src/test/: setup.ts
apps/desktop/src/types/: index.ts
assets/: ansi_to_png.py  generate_screenshots.py
crates/localcode-cli/: Cargo.toml
crates/localcode-cli/src/: conversation.rs  hooks.rs  main.rs  rendering.rs  repl.rs  slash.rs  streaming.rs
crates/localcode-cli/src/commands/: agent.rs  chat.rs  config.rs  fix.rs  init.rs  mod.rs  review.rs
crates/localcode-core/: Cargo.toml
crates/localcode-core/src/: lib.rs
crates/localcode-core/src/agent/: chat.rs  context.rs  engine.rs  memory.rs  mod.rs  permissions.rs  session.rs  subagent.rs  tools.rs
crates/localcode-core/src/agent/builtin/: command_tools.rs  file_tools.rs  git_tools.rs  memory_tools.rs  mod.rs  search_tools.rs  subagent_tools.rs  web_tools.rs
crates/localcode-core/src/config/: settings.rs
crates/localcode-core/src/debug/: breakpoints.rs  dap.rs  mod.rs  session.rs
crates/localcode-core/src/fs/: mod.rs  ops.rs  watcher.rs
crates/localcode-core/src/git/: blame.rs  history.rs  mod.rs  remote.rs  staging.rs  status.rs
crates/localcode-core/src/indexing/: chunker.rs  embeddings.rs  mod.rs  parser.rs  query.rs  store.rs
crates/localcode-core/src/llm/: anthropic.rs  local.rs  mod.rs  model_manager.rs  openai.rs  provider.rs  router.rs  streaming.rs
crates/localcode-core/src/lsp/: client.rs  manager.rs
crates/localcode-core/src/mcp/: client.rs  transport.rs
crates/localcode-core/src/plugin/: api.rs  host.rs  manifest.rs  mod.rs
crates/localcode-core/src/python/: detection.rs  mod.rs  pip.rs  pytest.rs  venv.rs
crates/localcode-core/src/search/: content.rs  files.rs  mod.rs  replace.rs
crates/localcode-core/src/terminal/: mod.rs  process.rs  pty.rs
docs/: AGENT.md  CLI.md  LOCALCODE.md.example
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/commands/: agent.rs  fs.rs  git.rs  llm.rs  mod.rs  search.rs  terminal.rs
frontend/src/components/ActivityBar/: ActivityBar.tsx
frontend/src/components/Editor/: EditorPanel.tsx  MonacoEditor.tsx
frontend/src/components/Search/: SearchPanel.tsx
frontend/src/components/StatusBar/: StatusBar.tsx
frontend/src/components/Terminal/: Terminal.tsx
frontend/src/hooks/: useInlineCompletion.ts
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
homebrew/: localcode.rb
tmp/: fibonacci.py  snake_test.py
(+6 files in other folders)
