[workspace]
resolver = "2"
members = [
    "crates/localcode-core",
    "crates/localcode-cli",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Svetozar Technologies"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
thiserror = "2"
log = "0.4"
git2 = "0.19"
ignore = "0.4"
walkdir = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "6"
