[package]
name = "localcode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LocalCode CLI - AI-powered coding assistant for the terminal"

[[bin]]
name = "localcode"
path = "src/main.rs"

[dependencies]
localcode-core = { path = "../localcode-core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
crossterm = "0.28"
syntect = "5"
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
