[package]
name = "localcode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for LocalCode - shared between CLI and desktop"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
portable-pty = "0.8"
grep-regex = "0.1"
grep-searcher = "0.1"
tokio-stream = "0.1"
pin-project-lite = "0.2"
notify = { workspace = true }
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
