[package]
name = "localcode"
version = "0.1.0"
description = "LocalCode - Privacy-first AI-powered code editor"
authors = ["Svetozar Technologies"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
walkdir = "2"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
git2 = "0.19"
futures = "0.3"
