[package]
name = "localcode-desktop"
version.workspace = true
description = "LocalCode - Privacy-first AI-powered code editor"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
localcode-core = { path = "../../../crates/localcode-core" }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { workspace = true }
futures = { workspace = true }
